--- a/index.html
+++ b/index.html
@@ -7,7 +7,11 @@
     <title>Vite App</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <div class="section container">
+        <progress class="progress is-primary is-small"></progress>
+      </div>
+    </div>
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
